--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -15,11 +15,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Unity
-        uses: game-ci/unity-actions/setup@v2
+        uses: game-ci/setup-unity@v2
         with:
-          unityVersion: 2022.3.0f1
+          unityVersion: 6000.0.4f1
 
       - name: Build project
-        uses: game-ci/unity-actions/build@v2
+        uses: game-ci/build@v1
         with:
           targetPlatform: StandaloneWindows64
